# singleeyefitter

./: CMakeLists.txt
cmd/: CMakeLists.txt  SingleEyeFitterCmd.cpp  clipper.cpp  clipper.hpp  strtk.hpp
lib/: CMakeLists.txt  DistancePointEllipse.h  SingleEyeFitter.cpp  cvx.cpp  distance.h  utils.cpp
lib/singleeyefitter/: Circle.h  Conic.h  Conicoid.h  Ellipse.h  Sphere.h  cvx.h  fun.h  intersect.h  math.h  projection.h  singleeyefitter.h  solve.h  timing.h  utils.h  zip.h
